[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emergency-first-response-decision-engine"
version = "1.0.0"
description = "OpenEnv environment for emergency first-response decision support."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.12",
  "uvicorn[standard]==0.34.0",
  "pydantic==2.11.3",
  "requests==2.32.3",
  "openai==1.75.0",
  "PyYAML==6.0.2",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["environment*"]
